refactor(sql): harden JUnit XML emitter via 5-round review loop
Iterative code-review fixes applied across 5 review/write cycles:

L1 - HIGH: BuildModeResolver stderr drain (ProcessBuilder + redirectErrorStream
prevents pipe-buffer deadlock); FailureCdataBuilder closes TestReader/
ResultReader; UnifiedDiffUtil empty-side header uses -0,0; JunitXmlWriter
atomic write via .tmp + renameTo; write(Test, String logId) signature;
testsuite name uses first-occurrence release/debug from cubrid_rel.

L2 - HIGH: ResultReader gains public close() (drops reflection hack);
mismatched answer/result block counts emit a synthetic truncation marker
instead of cascading nulls; cdataSafe strips \r and XML-illegal C0
controls; mkdirs return checked; .xml.tmp >60s sweep at writeXml entry.

L3 - MED: stale-tmp sweep skips the in-flight tmp; time uses
Locale.ROOT %.3f (no scientific notation); BuildModeResolver CACHED
synchronized happens-before documented; CI-aware testEmptySuite.

L4 - MED: FailureCdataBuilder Javadoc warns about TestReader meta-line
concatenation drift; JunitXmlWriter logs t.getClass().getName() for
debuggability; testEmptySuite asserts tests=0 failures=0 content;
UnifiedDiffUtil trim-rewind comment.

L5 - NIT: outFile.delete() return checked before rename; redundant
catch (IOException) collapsed into instanceof rethrow.

Self-tests: 28 total (UnifiedDiffUtil 15, FailureCdataBuilder 6,
JunitXmlWriter 3, BuildModeResolver 5 static + live). All pass.
ant clean dist BUILD SUCCESSFUL on Java 1.6 baseline.